2005-03-06  Christian Rose  <menthos@menthos.com>

	* rngames.xml: Spelled "GnomeMeeting" consistently.

2005-03-06  Frank Arnold  <farnold@cvs.gnome.org>

	* release-notes.xml, rnstandards.xml: Fixed broken links.
	* rnapplications.xml, rnsysadmin.xml: Fixed a problem with not 
	translatable figure descriptions of Evolution, Epihany and System Tools 
	(removed paragraph around figures).

2005-03-06  Christian Rose  <menthos@menthos.com>

	* release-notes.xml, rnapplets.xml, rnapplications.xml,
	rncontrolcenter.xml, rnsysadmin.xml, rnutilities.xml: Moved
	<figure>'s out of the <para>'s so that translation doesn't
	suffer from irrelevant markup.

2005-03-06  Danilo Šegan  <dsegan@gmx.net>

	* rni18n.xml: Comment unused paragraphs out.
	Update language count to 33.

2005-03-06  Murray Cumming  <murrayc@murrayc.com>

	* press_release/gnome210_press_release.[sxw|wml]: Corrected spelling 
	of Sao Paulo and added missing of in quote from Luis.

2005-03-06  Murray Cumming  <murrayc@murrayc.com>

	* rnapplets.xml: Fix link to mailnotify - we should use ulink url 
	instead of link href.

2005-03-06  Simos Xenitellis  <simos@gnome.org>

	* README_screenshots.txt: Added links to flash animation tutorial.

2004-03-05  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-file-roller.png: Added missing figure.
	* rnutilities: Fix image link.

2005-03-03  Frank Arnold  <farnold@cvs.gnome.org>

	* rnsysadmin.xml: Fixed a typo.

2005-03-03  Murray Cumming  <murrayc@murrayc.com>

	* release-notes.xml: Fix the caption of the desktop screenshot - 
	it was copy/pasted from the control center.

2005-03-03  Murray Cumming  <murrayc@murrayc.com>

	* rncontrolcenter.xml: Fixed a typo. Sorry translators.

2005-03-03  Davyd Madeley  <davyd@madeley.id.au>

	* rnapplets.xml:
	* rnapplications.xml:
	* rnutilities.xml: Linked to new images. Some strings changed where
	the were obviously the wrong thing (due to cutting and pasting I
	imagine), this really couldn't be helped.
	