@@ -1,3 +1,8 @@
+2005-03-07  Murray Cumming  <murrayc@murrayc.com>
+
+	* rnapplets.xml: Some spelling fixes from Shaun McCance because
+	Danilo says it is OK.
+
 2005-03-06  Christian Rose  <menthos@menthos.com>
 
 	* rngames.xml: Spelled "GnomeMeeting" consistently.
